--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,7 +24,7 @@
 			</div>
 		</div>
 	</div>
-	
+	<%= link_to "home", root_path %>
 	<div class="container">
 		<div class="row centered mt grid">
 			<h3>OUR LATEST WORK</h3>
